--- a/src/pages/home/style.module.scss
+++ b/src/pages/home/style.module.scss
@@ -1,5 +1,5 @@
 .section-todo-list :global {
-  @apply mx-auto max-w-[1440px] bg-todo-blue-10;
+  @apply mx-auto max-w-2xl bg-todo-blue-10;
   .container {
     @apply mx-auto max-w-[360px] p-0 pt-20 pb-20 md:max-w-[544px];
   }
