--- a/src/components/modal-delete-task/style.module.scss
+++ b/src/components/modal-delete-task/style.module.scss
@@ -1,7 +1,7 @@
-.com-modal-create-list :global {
+.com-modal-delete-task :global {
   @apply bg-rose-600;
   .heading {
-    @apply text-h3 font-medium;
+    @apply text-center text-h5 font-medium sm:text-h3;
   }
 
   .input {
