--- a/src/components/modal-update-task/style.module.scss
+++ b/src/components/modal-update-task/style.module.scss
@@ -1,4 +1,4 @@
-.com-modal-create-list :global {
+.com-modal-update-task :global {
   @apply bg-rose-600;
   .heading {
     @apply text-h3 font-medium;
