--- a/src/core-ui/button/style.module.scss
+++ b/src/core-ui/button/style.module.scss
@@ -1,7 +1,8 @@
 .com-button :global {
-  @apply p-4 text-h4 font-medium;
+  @apply p-4 font-medium sm:p-5 sm:text-h4;
 }
-// Modifiers
+
+// Modifier
 .com-button.blue :global {
   @apply bg-abc-blue text-white;
 }
