Todo 52: Use library MUI change the Button, Input (#17)
* feat: 🎸 TODO-52:  Use library MUI change the Button, Input

* feat: 🎸 Update

--- a/src/components/modal-share/style.module.scss
+++ b/src/components/modal-share/style.module.scss
@@ -21,9 +21,9 @@
     }
   }
   .input-group-modal {
-    @apply mt-1 flex justify-center;
+    @apply mt-1 flex;
   }
   .text-copy {
-    @apply grid h-16 w-20 cursor-pointer items-center bg-abc-blue p-0 text-center text-h4 font-medium text-white;
+    @apply grid h-16 w-20 cursor-pointer items-center p-0 text-center text-h4 font-medium capitalize text-white;
   }
 }
