--- a/src/pages/list/style.module.scss
+++ b/src/pages/list/style.module.scss
@@ -1,7 +1,7 @@
 .create-list-section :global {
   @apply py-20;
   .list-content {
-    @apply flex justify-between  border-b-2 border-black pb-8;
+    @apply flex justify-between  border-b-2 border-black pb-4;
   }
   .list-left {
     @apply flex items-center justify-between;
@@ -13,7 +13,6 @@
     @apply flex;
   }
   .title-todo {
-    // @apply px-2 text-base font-semibold sm:px-3 sm:text-h3;
     @apply px-2 text-base font-semibold sm:px-3 sm:text-h3;
   }
   .title-todo:first-child {
@@ -28,8 +27,6 @@
       @apply h-5 w-5  p-0 sm:h-6 sm:w-6;
     }
   }
-  //-----------------------------------------
-
   .list-group {
     @apply pt-8;
     .text-group {
@@ -38,8 +35,8 @@
     .title-group {
       @apply my-3.5 pl-4 text-base font-normal sm:my-5 sm:text-h4;
     }
-    .icon-group {
-      @apply flex gap-5 pr-4;
+    .actions {
+      @apply flex gap-3 pr-4;
     }
     .btn-hover-hand {
       @apply cursor-pointer bg-transparent p-0;
