🎸 TODO-32 Fix Bug UI Part 2 (#45)
* .

* .

--- a/src/pages/action/style.module.scss
+++ b/src/pages/action/style.module.scss
@@ -15,7 +15,19 @@
     @apply mt-16 text-center text-3xl font-medium text-abc-blue md:text-h1;
   }
   .section-btn {
-    @apply mt-8 grid grid-cols-2 gap-x-5;
+    @apply mt-8 grid-cols-2 gap-x-5 lg:grid;
+    .title-btn {
+      @apply w-full;
+    }
+    .input-group {
+      @apply mt-6  lg:mt-0;
+      .form-input {
+        @apply border-0;
+      }
+      .input-group-text {
+        @apply bg-abc-blue text-white;
+      }
+    }
   }
   .section-error {
     @apply mt-1 grid grid-cols-2 gap-x-5;
