--- a/src/pages/list/style.module.scss
+++ b/src/pages/list/style.module.scss
@@ -3,7 +3,7 @@
   .list-user {
     @apply flex items-center justify-end gap-3;
     .title-user {
-      @apply text-h4;
+      @apply text-h5 md:text-h4;
     }
   }
   .list-content {
@@ -22,7 +22,7 @@
     @apply flex;
   }
   .title-todo {
-    @apply px-2 text-h6 font-normal sm:text-h5 md:px-4  md:text-h3 md:font-semibold;
+    @apply px-2 text-h6 font-normal leading-4 sm:text-h5 md:px-4  md:text-h3 md:font-semibold;
   }
   .title-todo:first-child {
     @apply border-r-2  border-black;
@@ -30,7 +30,7 @@
   .list-right {
     @apply flex cursor-pointer items-center justify-between bg-transparent text-black hover:bg-transparent;
     .title-right {
-      @apply ml-2 text-h6 font-normal md:ml-4 md:text-h5;
+      @apply ml-2 text-h6 font-normal leading-4  md:ml-4 md:text-h3;
     }
     .abc-icon::before {
       @apply text-xl md:text-2xl;
