--- a/src/pages/todo/style.module.scss
+++ b/src/pages/todo/style.module.scss
@@ -1,5 +1,4 @@
 .create-list-section :global {
-  @apply py-10;
   .list-user {
     @apply flex items-center justify-end gap-3;
     .title-user {
@@ -36,19 +35,16 @@
   .list-group {
     @apply pt-8;
     .text-group {
-      @apply mb-5 flex h-12 w-full items-center justify-between bg-white sm:mb-5 sm:max-w-7xl;
+      @apply px-4 mb-5 flex h-12 w-full items-center justify-between bg-white sm:mb-5 sm:max-w-7xl;
     }
     .title-group {
-      @apply my-3.5 pl-4 text-h6 font-normal md:my-3 md:text-h4;
+      @apply my-3.5 text-h6 font-normal md:my-3 md:text-h4;
     }
     .actions {
-      @apply flex gap-3 pr-4;
+      @apply flex gap-x-1;
       .abc-icon::before {
         @apply text-xl md:text-2xl;
       }
-    }
-    .btn-hover-hand {
-      @apply cursor-pointer bg-transparent p-0;
     }
   }
 }
