--- a/src/components/topbar/style.module.scss
+++ b/src/components/topbar/style.module.scss
@@ -1,9 +1,6 @@
-  .topbar :global {
-    @apply flex items-center justify-end gap-3 mt-4;
-    .title-user {
-      @apply text-h5 md:text-h4;
-    }
-    .ico-user {
-      @apply text-xl;
-    }
+.topbar :global {
+  @apply mt-4 flex items-center justify-end gap-3;
+  .ico-user {
+    @apply text-xl;
   }
+}
