--- a/src/pages/action/style.module.scss
+++ b/src/pages/action/style.module.scss
@@ -9,14 +9,11 @@
   .title {
     @apply text-center text-5xl font-extrabold text-blue-500 md:text-hero;
   }
-  .headline {
-    @apply mt-6 text-center text-3xl text-blue-500 md:mt-16 md:text-h1 lg:font-medium;
+  .h1 {
+    @apply mt-6 text-center font-medium text-blue-500 md:mt-16;
   }
   .actions {
-    @apply mt-8 grid w-full gap-x-5 gap-y-5 md:mt-10 lg:grid-cols-2;
-  }
-  .btn-join {
-    @apply px-5 #{!important};
+    @apply mt-8 grid w-full gap-x-5 gap-y-5 md:mt-10 md:grid-cols-2;
   }
   .form-input {
     @apply p-0 px-4;
