--- a/src/pages/list/[id]/style.module.scss
+++ b/src/pages/list/[id]/style.module.scss
@@ -2,32 +2,35 @@
   .toolbar {
     @apply mt-4 flex justify-between;
     .left {
-      @apply flex w-full items-center;
+      @apply flex items-center truncate;
       .title {
-        @apply w-1/2 items-center break-all md:w-full md:flex-nowrap;
+        @apply w-full truncate text-lg font-semibold md:text-h3;
       }
-      .btn-create-new {
-        @apply px-0;
+      .icon-btn {
+        @apply pl-0;
+        .abc-icon {
+          @apply text-2xl md:text-3xl;
+        }
       }
     }
     .right {
-      @apply flex w-full justify-end gap-2 md:gap-6 lg:gap-8;
+      @apply flex justify-end gap-2 md:gap-6 lg:gap-8;
       .btn-create-new {
-        @apply hidden md:block lg:flex;
+        @apply hidden md:flex;
       }
-      .title-icon {
-        @apply m-auto flex hidden items-center lg:block;
+      .h5 {
+        @apply m-auto hidden items-center md:flex md:whitespace-nowrap;
       }
-      .abc-btn.btn {
-        @apply -mr-4 flex p-0;
+      .btn {
+        @apply -mr-4 whitespace-nowrap p-0 md:mr-0;
       }
       .abc-btn {
-        @apply p-0 md:p-3;
+        @apply p-0;
       }
     }
   }
   .tasks {
-    @apply mt-4 ml-2.5;
+    @apply mt-4;
     .item {
       @apply flex items-center justify-between border bg-white;
       @apply border-t-0 px-4 first:border-t;
@@ -35,20 +38,17 @@
       @apply transition-all duration-100;
       @apply hover:bg-blue-100;
     }
-    .checkbox-task {
-      @apply flex flex-grow;
+    .h6 {
+      @apply ml-3 w-full cursor-pointer truncate py-3;
     }
     .checked {
       @apply line-through;
     }
-    .title {
-      @apply w-full cursor-pointer truncate py-3 transition-all duration-100;
-    }
     .actions {
-      @apply -mr-3 flex gap-x-1;
+      @apply -mr-4 flex gap-x-1;
     }
   }
   .float-icon {
-    @apply bottom-10 flex cursor-pointer md:hidden;
+    @apply flex cursor-pointer md:hidden;
   }
 }
