--- a/src/pages/list/style.module.scss
+++ b/src/pages/list/style.module.scss
@@ -3,6 +3,12 @@
     @apply mt-4 flex justify-between;
     .left {
       @apply flex items-center;
+      .icon-btn {
+        @apply pl-0;
+        .abc-icon {
+          @apply text-2xl md:text-3xl;
+        }
+      }
     }
     .sep {
       @apply mx-3 inline-flex h-4 w-[1px] bg-cyan-800;
@@ -19,7 +25,7 @@
   }
 
   .list {
-    @apply mt-4 ml-2.5;
+    @apply mt-4;
     .item {
       @apply flex items-center justify-between border bg-white;
       @apply border-t-0 px-4 first:border-t;
