--- a/src/components/modal-todo-add-edit/style.module.scss
+++ b/src/components/modal-todo-add-edit/style.module.scss
@@ -1,4 +1,15 @@
 .com-modal-todo-add-edit :global {
+  .abc-modal-header {
+    .abc-icon {
+      @apply text-xl;
+    }
+    .title {
+      @apply -mt-5 mb-4;
+    }
+  }
+  .abc-modal-footer {
+    @apply mx-0 mt-2 mb-0 px-0 pb-0 md:pb-0.5;
+  }
   .abc-input {
     @apply relative;
     .message {
