--- a/src/pages/action/style.module.scss
+++ b/src/pages/action/style.module.scss
@@ -13,7 +13,7 @@
     @apply mt-6 text-center font-medium text-blue-500 md:mt-16;
   }
   .actions {
-    @apply mt-8 grid w-full gap-x-5 gap-y-5 md:mt-10 md:grid-cols-2;
+    @apply mt-8 grid w-full gap-x-5 gap-y-5 md:grid-cols-2;
   }
   .form-input {
     @apply p-0 px-4;
