--- a/src/pages/list/[id]/style.module.scss
+++ b/src/pages/list/[id]/style.module.scss
@@ -7,7 +7,7 @@
         @apply w-full truncate text-lg font-semibold md:text-h3;
       }
       .icon-btn {
-        @apply pl-0;
+        @apply pl-0 pr-3;
         .abc-icon {
           @apply text-2xl md:text-3xl;
         }
@@ -30,7 +30,7 @@
     }
   }
   .tasks {
-    @apply mt-4;
+    @apply mt-5;
     .item {
       @apply flex items-center justify-between border bg-white;
       @apply border-t-0 px-4 first:border-t;
