--- a/src/pages/list/style.module.scss
+++ b/src/pages/list/style.module.scss
@@ -1,17 +1,17 @@
 .page-list :global {
   .toolbar {
-    @apply mt-4 flex justify-between;
+    @apply mt-5 flex justify-between;
     .left {
       @apply flex items-center;
       .icon-btn {
-        @apply pl-0;
+        @apply pl-0 pr-3;
         .abc-icon {
           @apply text-2xl md:text-3xl;
         }
       }
     }
     .sep {
-      @apply mx-3 inline-flex h-4 w-[1px] bg-cyan-800;
+      @apply mx-2 inline-flex h-4 w-[1px] bg-cyan-800;
     }
     .title {
       @apply flex items-center;
@@ -21,11 +21,14 @@
     }
     .right {
       @apply hidden md:block;
+      .icon {
+        @apply mr-3;
+      }
     }
   }
 
   .list {
-    @apply mt-4;
+    @apply mt-5;
     .item {
       @apply flex items-center justify-between border bg-white;
       @apply border-t-0 px-4 first:border-t;
