--- a/src/components/topbar/style.module.scss
+++ b/src/components/topbar/style.module.scss
@@ -1,6 +1,12 @@
 .topbar :global {
-  @apply mt-6 flex items-center justify-end gap-3;
+  @apply mt-4;
+  .authenticated {
+    @apply flex w-full items-center;
+  }
   .ico-user {
-    @apply text-xl;
+    @apply ml-auto mr-2 text-xl;
+  }
+  .sep {
+    @apply mx-2 h-4 w-[1px] bg-cyan-800;
   }
 }
