--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -4,7 +4,7 @@
     @apply flex h-full items-center;
   }
   .inner {
-    @apply mx-auto  w-full md:max-w-xl;
+    @apply mx-auto w-full md:max-w-xl;
   }
   .logo-wrapper {
     @apply flex justify-center md:mt-6;
@@ -16,19 +16,19 @@
     @apply w-28;
   }
   form {
+    // @apply mt-6 md:mt-14;
+    @apply mt-10 rounded-lg bg-white px-4 py-9 md:mt-16 md:py-16 md:px-20;
     h2 {
-      @apply mb-6 md:mb-14;
+      @apply mb-14;
     }
-    @apply mt-8 rounded-lg border bg-white px-4 py-9 md:mt-16 md:py-16 md:px-20;
-  }
-  .abc-input.error {
-    @apply relative;
-    @apply mb-1 md:mb-0;
-    .message {
-      @apply absolute left-0 mt-0 text-xs;
+    .abc-input.error {
+      @apply relative;
+      .message {
+        @apply absolute left-0;
+      }
     }
   }
   .btn-submit {
-    @apply mt-4 w-full md:mt-6;
+    @apply mt-6 w-full;
   }
 }
