--- a/src/pages/list/[id]/style.module.scss
+++ b/src/pages/list/[id]/style.module.scss
@@ -41,9 +41,9 @@
     }
   }
   .tasks {
-    @apply mt-3 lg:mt-5;
+    @apply mt-1 lg:mt-5;
     .empty {
-      @apply flex justify-center;
+      @apply -mt-1 flex justify-center;
     }
     .item {
       @apply flex items-center justify-between border bg-white;
