--- a/src/pages/list/style.module.scss
+++ b/src/pages/list/style.module.scss
@@ -27,9 +27,9 @@
     }
   }
   .list {
-    @apply mt-3 lg:mt-5;
+    @apply mt-1 lg:mt-5;
     .empty {
-      @apply flex justify-center;
+      @apply -mt-1 flex justify-center;
     }
     .item {
       @apply flex items-center justify-between border bg-white;
