--- a/src/components/footer/style.module.scss
+++ b/src/components/footer/style.module.scss
@@ -1,5 +1,8 @@
 .footer :global {
   @apply mt-auto py-4;
+  .container {
+    @apply px-4;
+  }
   .copyright {
     @apply text-center md:flex md:items-center md:justify-center md:gap-1;
   }
