--- a/src/pages/list/[id]/style.module.scss
+++ b/src/pages/list/[id]/style.module.scss
@@ -32,6 +32,9 @@
           @apply hidden md:inline;
         }
       }
+      .btn-edit {
+        @apply min-w-0 pr-0 md:pr-3;
+      }
       .btn-share {
         @apply min-w-0 px-0 md:px-3;
       }
@@ -53,7 +56,7 @@
       @apply hover:bg-blue-100;
     }
     .h6 {
-      @apply ml-3 flex w-full cursor-pointer items-start break-all py-3 leading-none;
+      @apply mx-3 flex w-full cursor-pointer items-start break-all py-3 leading-none;
     }
     .checked {
       @apply line-through opacity-50;
