--- a/src/components/list/style.module.scss
+++ b/src/components/list/style.module.scss
@@ -27,7 +27,7 @@
     }
   }
   .list {
-    @apply mt-1 lg:mt-5;
+    @apply mt-3 lg:mt-5;
     .empty {
       @apply -mt-1 flex justify-center;
     }
@@ -39,7 +39,7 @@
       @apply hover:bg-blue-100;
     }
     .title {
-      @apply w-full cursor-pointer truncate py-3;
+      @apply mr-2 w-full cursor-pointer truncate py-3;
     }
     .actions {
       @apply -mr-2 flex gap-x-3;
