--- a/src/pages/list/[id]/style.module.scss
+++ b/src/pages/list/[id]/style.module.scss
@@ -5,7 +5,7 @@
   .toolbar {
     @apply mt-3 flex items-start justify-between lg:mt-5;
     h2 {
-      @apply mr-auto break-all text-h4 font-semibold leading-none md:text-h2;
+      @apply mr-auto break-words text-h4 font-semibold leading-none md:text-h2;
     }
     .left {
       @apply flex items-center;
@@ -20,7 +20,7 @@
       @apply mx-2 inline-flex h-4 w-[1px] bg-cyan-800;
     }
     .title {
-      @apply mt-2.5 lg:mt-2;
+      @apply mt-2.5 mr-3 w-full break-words lg:mt-2;
     }
     .right {
       @apply flex;
@@ -29,22 +29,22 @@
           @apply hidden whitespace-nowrap md:inline;
         }
         p {
-          @apply hidden md:inline;
+          @apply hidden lg:inline;
         }
       }
       .btn-edit {
-        @apply min-w-0 pr-0 md:pr-3;
+        @apply min-w-0 pr-0 lg:pr-3;
       }
       .btn-share {
-        @apply min-w-0 px-0 md:px-3;
+        @apply min-w-0 px-0 lg:px-3;
       }
       .btn-add-todo {
-        @apply hidden min-w-0 pr-0 md:flex;
+        @apply hidden min-w-0 pr-0 lg:flex;
       }
     }
   }
   .tasks {
-    @apply mt-1 lg:mt-5;
+    @apply mt-3 lg:mt-5;
     .empty {
       @apply -mt-1 flex justify-center;
     }
@@ -56,7 +56,7 @@
       @apply hover:bg-blue-100;
     }
     .h6 {
-      @apply mx-3 flex w-full cursor-pointer items-start break-all py-3 leading-none;
+      @apply mx-3 flex w-full cursor-pointer items-start break-words py-3 leading-5;
     }
     .checked {
       @apply line-through opacity-50;
