--- a/src/pages/list/[id]/style.module.scss
+++ b/src/pages/list/[id]/style.module.scss
@@ -53,8 +53,11 @@
       @apply flex w-full  justify-between border bg-white;
       @apply border-t-0 px-4 first:border-t;
       @apply first:rounded-t-lg last:rounded-b-lg;
-      @apply transition-all duration-100;
       @apply hover:bg-blue-100;
+      @apply relative;
+      &:hover {
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+      }
     }
     .h6 {
       @apply mx-3 flex w-full cursor-pointer items-start py-3 leading-5;
