🐛 Lỗi field của ô input cần cho lên 1 tý

--- a/src/components/login/style.module.scss
+++ b/src/components/login/style.module.scss
@@ -26,6 +26,9 @@
       .message {
         @apply absolute left-0;
       }
+      .invalid {
+        @apply mt-0;
+      }
     }
   }
   .btn-submit {
