--- a/src/components/list/list-detail/toolbar/style.module.scss
+++ b/src/components/list/list-detail/toolbar/style.module.scss
@@ -2,7 +2,7 @@
   .toolbar {
     @apply mt-3 flex items-start justify-between lg:mt-5;
     h2 {
-      @apply mr-auto break-words text-h4 font-semibold leading-[18px] md:text-h2 lg:leading-none;
+      @apply mr-auto break-words text-h4 font-semibold md:text-h2;
     }
     .left {
       @apply flex items-center;
