🐛 Giảm space giữa icon và text (giảm bằng với space giữa nút logout và name)

--- a/src/components/list/list-detail/toolbar/style.module.scss
+++ b/src/components/list/list-detail/toolbar/style.module.scss
@@ -30,6 +30,9 @@
           @apply hidden lg:inline;
         }
       }
+      .abc-btn {
+        @apply gap-0;
+      }
       .btn-edit {
         @apply min-w-0 pr-0 lg:pr-3;
       }
