--- a/src/components/list/list-detail/toolbar/style.module.scss
+++ b/src/components/list/list-detail/toolbar/style.module.scss
@@ -17,7 +17,7 @@
       @apply mx-2 inline-flex h-4 w-[1px] bg-cyan-800;
     }
     .title {
-      @apply mt-2.5 mr-3 w-full lg:mt-2;
+      @apply mt-2.5 mr-3 w-full lg:mt-0;
       word-break: break-word;
     }
     .right {
@@ -33,14 +33,14 @@
       .abc-btn {
         @apply gap-0;
       }
-      .btn-edit {
-        @apply min-w-0 pr-0 lg:pr-3;
-      }
-      .btn-share {
-        @apply min-w-0 px-0 lg:px-3;
-      }
+      // .btn-edit {
+      //   @apply min-w-0 pr-0 lg:pr-3;
+      // }
+      // .btn-share {
+      //   @apply min-w-0 px-0 lg:px-3;
+      // }
       .btn-add-todo {
-        @apply hidden min-w-0 pr-0 md:flex;
+        @apply hidden md:flex;
       }
     }
   }
