--- a/src/components/list/style.module.scss
+++ b/src/components/list/style.module.scss
@@ -45,7 +45,7 @@
       @apply mr-2 w-full cursor-pointer truncate py-3;
     }
     .actions {
-      @apply -mr-2 flex gap-x-3;
+      @apply -mr-2 flex items-center gap-x-3;
     }
   }
   .float-icon {
