🎸 Làm hiệu ứng to thẻ khi đang click giữ chuột task (#184)

--- a/src/components/list/list-detail/style.module.scss
+++ b/src/components/list/list-detail/style.module.scss
@@ -12,8 +12,8 @@
       @apply border-t-0 px-4 first:border-t;
       @apply first:rounded-t-lg last:rounded-b-lg;
       @apply relative;
-      &:hover {
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+      &.select {
+        @apply z-10 scale-105 transform-gpu drop-shadow-lg ease-in-out-back;
       }
     }
     .h6 {
