--- a/src/components/modal/modal-create-update-list/style.module.scss
+++ b/src/components/modal/modal-create-update-list/style.module.scss
@@ -12,4 +12,7 @@
       @apply absolute left-0 mt-0 text-xs;
     }
   }
+  .input-type {
+    @apply mt-4 h-[50px] w-full rounded-[4px] border-[#CBD5E1] bg-white focus:border-0 focus:outline-0;
+  }
 }
