🐛 UI thanh công cụ trong trang list detail chưa thẳng hàng với icon logout

--- a/src/components/list/list-detail/toolbar/style.module.scss
+++ b/src/components/list/list-detail/toolbar/style.module.scss
@@ -31,7 +31,7 @@
         }
       }
       .abc-btn {
-        @apply gap-0;
+        @apply gap-0 pr-0 pl-4;
       }
       // .btn-edit {
       //   @apply min-w-0 pr-0 lg:pr-3;
