add private list error style page

--- a/src/components/list/list-detail/style.module.scss
+++ b/src/components/list/list-detail/style.module.scss
@@ -1,4 +1,7 @@
 .list-detail :global {
+  .error-private-list {
+    @apply mt-3 flex justify-center text-red-500;
+  }
   .container {
     @apply px-4 md:p-0;
   }
