--- a/src/components/list/list-detail/toolbar/style.module.scss
+++ b/src/components/list/list-detail/toolbar/style.module.scss
@@ -21,8 +21,11 @@
       word-break: break-word;
     }
     .right {
-      @apply flex;
+      @apply flex items-center;
       button {
+        .abc-icon {
+          @apply -mr-2;
+        }
         span.h5 {
           @apply hidden whitespace-nowrap md:inline;
         }
@@ -30,17 +33,40 @@
           @apply hidden lg:inline;
         }
       }
-      .abc-btn {
-        @apply gap-0 pr-0 pl-4;
-      }
-      // .btn-edit {
-      //   @apply min-w-0 pr-0 lg:pr-3;
-      // }
-      // .btn-share {
-      //   @apply min-w-0 px-0 lg:px-3;
-      // }
       .btn-add-todo {
         @apply hidden md:flex;
+      }
+    }
+    .filter {
+      @apply relative ml-3 flex items-center gap-1.5;
+    }
+    .filter-icon {
+      @apply absolute h-7;
+    }
+    .select {
+      @apply overflow-hidden;
+      .MuiSelect-select {
+        @apply ml-2 p-0 lg:pl-5;
+        .text-h5 {
+          @media only screen and (max-width: 1023px) {
+            // background-color: inherit !important;
+            font-weight: 900;
+            border-radius: 12px !important;
+            margin: 8px 8px 0;
+            padding: 0 4px !important;
+            font-size: 12px !important;
+            line-height: 14px !important;
+          }
+        }
+      }
+      .MuiSelect-icon {
+        @apply fill-white;
+      }
+      .MuiOutlinedInput-notchedOutline {
+        @apply border-0;
+      }
+      svg {
+        @apply hidden;
       }
     }
   }
