--- a/src/components/login/style.module.scss
+++ b/src/components/login/style.module.scss
@@ -1,37 +1,67 @@
-.com-quick-play :global {
+.com-login {
   @apply h-full;
-  .container {
-    @apply flex h-full items-center p-4 md:p-0;
+}
+.container {
+  @apply relative flex h-full items-center justify-between p-4 md:p-0 lg:overflow-clip;
+}
+
+.inner {
+  @apply mx-auto w-full md:max-w-xl;
+}
+
+.logo-wrapper {
+  @apply flex justify-center;
+}
+
+.welcome {
+  @apply mt-5 mb-3 space-y-1 md:mt-8 md:mb-6;
+  h2 {
+    @apply text-xl font-bold leading-7 md:text-3xl;
   }
-  .inner {
-    @apply mx-auto w-full md:max-w-xl;
+  p {
+    @apply text-gray-400;
   }
-  .logo-wrapper {
-    @apply flex justify-center md:mt-6;
+}
+.form {
+  @apply rounded-lg bg-white px-4 py-9 shadow-lg md:px-12 md:pb-8;
+  .abc-btn {
+    @apply shadow-md;
+    padding: 10px !important;
   }
-  svg {
-    @apply w-[250px] lg:w-full;
-  }
-  .todolist-logo {
-    @apply w-28;
-  }
-  form {
-    // @apply mt-6 md:mt-14;
-    @apply mt-8 rounded-lg bg-white px-4 py-9 lg:mt-16 lg:py-16 lg:px-20;
-    h2 {
-      @apply mb-14;
+  .abc-input.error {
+    @apply relative;
+    .message {
+      @apply absolute left-0;
     }
-    .abc-input.error {
-      @apply relative;
-      .message {
-        @apply absolute left-0;
-      }
-      .invalid {
-        @apply mt-0;
-      }
+    .invalid {
+      @apply mt-0;
     }
   }
-  .btn-submit {
-    @apply mt-6 w-full;
+}
+
+.name-input {
+  @apply text-base font-medium;
+}
+
+.btn-submit {
+  @apply mt-4 w-full;
+}
+
+.or {
+  @apply mt-9;
+  @apply relative h-6 border-none text-center;
+  &:before {
+    @apply bg-gray-400 opacity-50 content-[''];
+    @apply absolute left-0 top-1/2 h-[1px] w-full;
   }
+  &:after {
+    content: attr(data-content);
+    @apply relative inline-block;
+    @apply bg-white text-black;
+    @apply py-0 px-2 font-medium leading-6;
+  }
+}
+
+.login-buttons {
+  @apply mt-4 flex justify-center;
 }
