--- a/src/components/lobby/style.module.scss
+++ b/src/components/lobby/style.module.scss
@@ -1,27 +1,33 @@
-.page-action :global {
-  @apply h-full;
-  .container {
-    @apply flex h-full items-center px-4 md:p-0;
-  }
-  .inner {
-    @apply mx-auto  w-full md:max-w-[708px];
-  }
-  .title {
-    @apply text-center text-5xl font-extrabold text-blue-500 md:text-hero;
-  }
-  .h1 {
-    @apply mt-6 text-center font-medium text-blue-500 lg:mt-16;
-  }
-  .actions {
-    @apply mt-8 grid w-full gap-x-5 gap-y-5 md:grid-cols-2;
-  }
-  .form-input {
-    @apply p-0 px-4;
-  }
+.page-lobby {
+  @apply h-full overflow-x-hidden;
   .abc-input.error {
     @apply relative;
     .message {
       @apply absolute left-0;
     }
+  }
+}
+
+.container {
+  @apply relative flex h-full flex-col-reverse items-center xl:flex-row;
+  @apply space-x-28 px-10 xl:px-40;
+  @apply py-10;
+  // @apply bg-amber-400 py-8;
+}
+
+.inner {
+  @apply basis-1/2;
+}
+
+.actions {
+  @apply grid lg:grid-cols-2;
+  @apply gap-x-5 gap-y-4;
+  @apply mt-8 w-full;
+}
+.decor {
+  @apply flex basis-1/2 justify-end;
+  // background: aqua;
+  svg {
+    @apply h-auto w-96 sm:w-[80%] xl:w-full xl:max-w-full;
   }
 }
