--- a/src/components/list/style.module.scss
+++ b/src/components/list/style.module.scss
@@ -2,6 +2,9 @@
   .container {
     @apply px-4 md:p-0;
   }
+  .favorite-list {
+    @apply mt-10;
+  }
   .toolbar {
     @apply mt-3 flex justify-between lg:mt-5;
     .left {
@@ -13,16 +16,13 @@
         }
       }
     }
-    .sep {
-      @apply mx-2 inline-flex h-4 w-[1px] bg-cyan-800;
-    }
     .title {
       @apply flex items-center;
     }
     .right {
       @apply hidden md:flex;
       .abc-btn {
-        @apply gap-0;
+        @apply gap-0 p-0;
       }
       button {
         @apply pr-0;
