🥵 Hot fix break ui on toolbar list detail page (#205)

--- a/src/components/list-detail/toolbar/style.module.scss
+++ b/src/components/list-detail/toolbar/style.module.scss
@@ -1,11 +1,12 @@
 .toolbar {
-  @apply mt-4 flex h-7 items-center justify-between lg:mt-6 lg:h-9;
+  @apply flex justify-between;
+  @apply mt-4 gap-x-6 lg:mt-6;
 }
 .tools {
   @apply flex h-full items-center;
 }
 .left {
-  @apply gap-2.5;
+  @apply items-start gap-2.5;
 }
 .title {
   @apply text-h4 lg:mt-0 lg:text-h2;
