--- a/src/components/common/404/404.module.scss
+++ b/src/components/common/404/404.module.scss
@@ -1,10 +1,10 @@
 .page-not-found :global {
-  @apply grid min-h-screen place-items-center p-4 text-white sm:p-8;
+  @apply mt-10 grid place-items-center p-4 text-white sm:p-8 lg:mt-40;
   .container {
-    @apply text-center text-blue-500;
+    @apply text-center text-black;
   }
   .heading {
-    @apply mb-4 text-sm uppercase tracking-widest sm:mb-5;
+    @apply mb-4 text-hero uppercase tracking-widest sm:mb-5;
   }
   .image {
     @apply mb-11 flex justify-center;
