Fix UI Lobby and New List in My List Page (#207)

--- a/src/components/lobby/style.module.scss
+++ b/src/components/lobby/style.module.scss
@@ -12,7 +12,12 @@
   @apply relative flex h-full flex-col-reverse items-center xl:flex-row;
   @apply space-x-28 px-10 xl:px-40;
   @apply py-10;
-  // @apply bg-amber-400 py-8;
+  form {
+    @apply relative;
+    p {
+      @apply absolute;
+    }
+  }
 }
 
 .inner {
@@ -24,6 +29,7 @@
   @apply gap-x-5 gap-y-4;
   @apply mt-8 w-full;
 }
+
 .decor {
   @apply flex basis-1/2 justify-end;
   // background: aqua;
