--- a/src/components/common/ckeditor/style.module.scss
+++ b/src/components/common/ckeditor/style.module.scss
@@ -1,7 +1,7 @@
-.ckeditor {
-  ul,
-  ol {
-    padding: 0 32px;
-    list-style: revert;
-  }
-}
+// .ckeditor {
+//   ul,
+//   ol {
+//     padding: 0 32px;
+//     list-style: revert;
+//   }
+// }
