🐛 Fix UI với chị Hòa (#239)
* fix max width in description and comment

* List to-do: khoảng cách giữa các icon chưa đều nha

* List to-do: khoảng cách giữa các icon chưa đều nha, chỉnh padding trên dưới và khoảng cách bên phải của ngôi sao

* fix ipad đứng mất padding, và khoảng cách nút status bên phải

* fix ui task detail: ảnh trong comment và khoảng cách trên dưới của comment

* 🎸 disable the touch navigation (swipe). in comment image popup

* fix image spacing

* fix ui

* more style on topbar

* update ui

* Update index.tsx

* edit style 2..40PM 10-11-2022 PM

* more styling 2__52PM

* style 3__20PM 10__11_2022 PM

* fix style 3__34PM 10__11__2022

* fix icon chervo desktop only

Co-authored-by: Huy Ngo <101651216+itnxhuy1806@users.noreply.github.com>

--- a/src/components/list-detail/toolbar/style.module.scss
+++ b/src/components/list-detail/toolbar/style.module.scss
@@ -1,6 +1,6 @@
 .toolbar {
   @apply flex justify-between;
-  @apply mt-4 gap-x-6 lg:mt-6;
+  @apply mt-4 gap-x-4 lg:mt-6 lg:gap-x-6;
 }
 .tools {
   @apply flex h-full items-center;
