--- a/src/components/task-detail/task-body/body-left/comment/comment-list/style.module.scss
+++ b/src/components/task-detail/task-body/body-left/comment/comment-list/style.module.scss
@@ -6,10 +6,11 @@
     @apply flex gap-x-2 font-semibold text-slate-700;
   }
   .time {
-    @apply font-medium text-slate-500;
+    @apply font-normal text-slate-500;
+    @apply text-xs leading-[2.1];
   }
   .content {
-    @apply mt-2 mb-1 text-slate-700;
+    @apply mb-1 text-slate-700;
   }
   .right {
     @apply w-full;
@@ -17,7 +18,7 @@
   .actions {
     @apply flex gap-1;
     button {
-      @apply text-slate-500 underline;
+      @apply text-sm font-normal text-slate-500 underline;
     }
   }
   .more-comments {
