--- a/src/components/task-detail/task-toolbar/style.module.scss
+++ b/src/components/task-detail/task-toolbar/style.module.scss
@@ -1,17 +1,14 @@
 .toolbar :global {
   @apply mx-4 sm:mx-0;
   .header {
-    @apply mt-9 flex justify-between gap-4;
+    @apply mt-5 flex justify-between gap-4;
     .abc-btn {
       @apply min-h-fit min-w-fit p-0;
     }
     .left {
       @apply flex grow items-start gap-2.5;
-      .ico-task {
-        @apply mt-[-3px] hidden sm:block;
-      }
       h2 {
-        @apply text-h5 font-medium lg:text-h2 lg:font-semibold;
+        @apply text-h4 font-semibold lg:text-h2;
         word-break: break-word;
       }
     }
