--- a/src/components/list/style.module.scss
+++ b/src/components/list/style.module.scss
@@ -1,12 +1,12 @@
 .page-list :global {
   .container {
-    @apply px-4 md:p-0;
+    @apply px-4;
   }
   .favorite-list {
-    @apply mt-10;
+    @apply mt-8;
   }
   .toolbar {
-    @apply mt-3 flex justify-between lg:mt-5;
+    @apply mt-3 flex justify-between lg:mt-3;
     .left {
       @apply flex items-center;
       .icon-btn {
@@ -30,7 +30,7 @@
     }
   }
   .list {
-    @apply mt-3 lg:mt-5;
+    @apply mt-3 lg:mt-4;
     .empty {
       @apply -mt-1 flex justify-center;
     }
