--- a/src/components/lists-detail/list-task-kanban/container/style.module.scss
+++ b/src/components/lists-detail/list-task-kanban/container/style.module.scss
@@ -1,5 +1,7 @@
 .kanban-container :global {
-  @apply grid grid-cols-6 gap-x-4 pt-6;
-  @apply w-[1840px];
-  @apply ml-5;
+  @apply ml-5 overflow-y-auto;
+  .kanban-container-scroll {
+    @apply grid grid-cols-6 gap-x-4 pt-6;
+    @apply w-[1840px];
+  }
 }
