--- a/src/components/board/column/body/style.module.scss
+++ b/src/components/board/column/body/style.module.scss
@@ -1,6 +1,6 @@
-.droppable :global {
+.column-body :global {
   height: inherit;
-  width: 300px;
+  width: 285px;
   // padding: 20px 10px;
   // border: 1px solid black;
   // border-radius: 5px;
