--- a/src/components/board/container/style.module.scss
+++ b/src/components/board/container/style.module.scss
@@ -1,7 +1,7 @@
 .kanban-container :global {
-  @apply ml-5 overflow-y-auto;
+  @apply mt-6 min-h-screen overflow-x-auto;
   .kanban-container-scroll {
-    @apply grid grid-cols-6 gap-x-4 pt-6;
+    @apply grid grid-cols-6 gap-x-4;
     @apply w-[1840px];
   }
 }
