🎸 Improve UI Kanban, Experiment new layout, experiment feature (Drag column kanban) (#407)
* rename kanban-column-footer to add-task-kanban

* now we can touch column

* now we can have overlay for column

* set up drag overlay for both column and task

* handle drag task not conflict with drag column

* bk

* fix drag task below add button on each column

* fix drag end task below add button conflict with drag column

* fix active Task undefined on drag end event

* stuck in order object js

* complete drag column on state

* temporary disable all code in drag end event

* fix layout

* yeah, i did it, i fix scrollbar well

* fix ui for task assignee

* fix edit, delete button text hide on ipad

* everything is ok

* minimal code

* refactor name

* fix layout topbar component

* beginner of make structure for layout

* layout for top area left

* improve new ui for topbar

* improve ui navigation baar

* add share button on new layout

* improve style

* improve share button on both list page and board page]

* improve toolbar setting for both page

* fix active list view or kanban view in toolbar

* migration new topbar ui to other page

* fix update status on column short and column long have scrollbar

--- a/src/components/board/container/style.module.scss
+++ b/src/components/board/container/style.module.scss
@@ -1,6 +1,7 @@
 .kanban-container :global {
-  @apply mt-6 overflow-x-auto;
-  .kanban-container-scroll {
+  @apply mt-6;
+  @apply overflow-x-auto;
+  .inner {
     @apply grid grid-cols-6 gap-x-4;
     @apply w-[1840px];
   }
