--- a/src/components/board/column/body/add-task/style.module.scss
+++ b/src/components/board/column/body/add-task/style.module.scss
@@ -1,7 +1,7 @@
-.kanban-column-footer :global {
+.add-task-kanban :global {
   .btn-add-task {
     @apply flex justify-center hover:cursor-pointer;
     @apply rounded-xl border border-dashed;
-    @apply p-3 text-slate-500;
+    @apply w-[285px] p-3 text-slate-500;
   }
 }
