--- a/src/components/board/column/body/style.module.scss
+++ b/src/components/board/column/body/style.module.scss
@@ -1,8 +1,5 @@
 .column-body :global {
-  height: inherit;
-  width: 285px;
-  // padding: 20px 10px;
-  // border: 1px solid black;
-  // border-radius: 5px;
-  list-style-type: none;
+  @apply w-[285px] list-none overflow-y-auto;
+  max-height: 60vh;
+  overflow: auto;
 }
