--- a/src/components/notification/contents/style.module.scss
+++ b/src/components/notification/contents/style.module.scss
@@ -1,40 +1,40 @@
 .contents :global {
-  @apply w-[406px];
-  .wrapper {
-    @apply py-4 text-h7;
-  }
+  @apply w-full text-h7 lg:w-[406px];
   hr {
     @apply mt-4;
   }
-  .header {
-    @apply text-center;
-  }
-  .title {
-    @apply font-normal text-slate-500;
-  }
   .empty {
-    @apply text-center text-slate-500;
-  }
-  .item {
-    @apply relative flex cursor-pointer gap-2 px-4 pt-1.5;
-    @apply hover:bg-sky-50;
-  }
-  .content {
-    @apply w-[310px] line-clamp-2;
-
-    a {
-      @apply text-slate-700 underline;
-    }
-  }
-  .time {
-    @apply text-xs;
-  }
-  .dot {
-    @apply absolute top-2 right-3;
-    @apply inline-block h-3 w-3 rounded-full bg-sky-500;
+    @apply mt-4 text-center text-slate-500;
   }
   .load-more {
-    @apply mt-3 cursor-pointer;
-    @apply text-center text-slate-500 underline;
+    @apply mt-3 cursor-pointer text-center underline;
+  }
+  .header {
+    @apply relative text-center;
+    .title {
+      @apply text-base font-semibold text-slate-500;
+    }
+    .ico {
+      @apply absolute top-0 right-[14px] cursor-pointer text-slate-500;
+    }
+  }
+  .item {
+    @apply relative flex cursor-pointer gap-2 px-4 py-1.5 hover:bg-sky-50;
+    .sender-name {
+      @apply font-semibold;
+    }
+    .content {
+      @apply mr-3 line-clamp-2 lg:w-[310px];
+      a {
+        @apply text-slate-700 underline;
+      }
+      .time {
+        @apply text-xs;
+      }
+    }
+    .dot {
+      @apply absolute top-2 right-3;
+      @apply inline-block h-3 w-3 rounded-full bg-sky-500;
+    }
   }
 }
