Improve UI Toolbar List, Layout New, reduce kanban body width on mobile (#425)
* fix detect page title better

* remove unused code topbar-area left

* fix page title

* improve ui toolbar for list detail, kanban page

* fix align toolbar list detail mobile

* keep backbutton on mobile, new layout

* split code hook for toparea-left

* fix start favorite position

* improve ui navigation bar

* refactor kanbancolumn footer

* change icon back

* fix icon breadcumb desktop

* fix ui navigation

--- a/src/components/topbar-new/navigation/style.module.scss
+++ b/src/components/topbar-new/navigation/style.module.scss
@@ -1,17 +1,21 @@
 .navigation {
-  @apply py-6 text-base font-semibold;
-  @apply text-[#0EA5E9];
+  @apply py-6;
+  @apply text-base font-semibold text-sky-500;
+  @apply hidden md:block;
 }
 .menu-bar {
-  @apply items-center;
-  @apply justify-between rounded-lg md:flex md:h-16 md:bg-[#F1F5F9] md:px-3;
+  @apply flex items-center justify-between;
+  @apply rounded-lg bg-[#F1F5F9] md:h-16 md:px-3;
+  a {
+    @apply px-3;
+  }
 }
 
 .menu-bar-left {
-  @apply hidden gap-x-6 py-3 md:flex;
+  @apply gap-x-6 py-3;
 }
 .active {
-  @apply border-b-[1.5px] border-b-blue-500 pb-2;
+  @apply border-b-2 border-b-sky-500 pb-5;
 }
 
 .menu-bar-right {
