--- a/src/components/toolbar-list-detail/toolbar-right/style.module.scss
+++ b/src/components/toolbar-list-detail/toolbar-right/style.module.scss
@@ -24,4 +24,7 @@
   .active {
     @apply rounded border bg-[#E5E7EB] px-1 pt-1;
   }
+  .icons {
+    @apply leading-tight hover:cursor-pointer;
+  }
 }
