--- a/src/components/common/option-document/style.module.scss
+++ b/src/components/common/option-document/style.module.scss
@@ -1,10 +1,10 @@
 .options :global {
-  @apply w-40 py-1 px-3;
+  @apply absolute left-[70%] z-10 w-40 py-1;
   @apply border border-[#E2E8F0];
-  @apply bg-white;
-  a {
-    @apply block  py-3;
-    @apply text-black no-underline hover:bg-slate-200;
+  @apply bg-white shadow-[0_10px_22px_rgba(45,77,108,0.15)];
+  .btn {
+    @apply w-full py-3 px-3;
+    @apply rounded-none hover:bg-slate-200;
     @apply border-b last:border-none;
   }
 }
