--- a/src/components/board/column/body/item/thumbnail/style.module.scss
+++ b/src/components/board/column/body/item/thumbnail/style.module.scss
@@ -1,6 +1,3 @@
 .task-thumbnail :global {
-  @apply mb-3 flex justify-center;
-  img {
-    @apply max-h-64 max-w-full rounded;
-  }
+  @apply relative mb-3 flex h-16 w-full justify-center rounded;
 }
