--- a/src/components/board/column/body/style.module.scss
+++ b/src/components/board/column/body/style.module.scss
@@ -1,5 +1,3 @@
 .column-body :global {
-  @apply w-[266px] list-none overflow-y-auto md:w-[285px];
-  max-height: 100vh;
-  overflow: auto;
+  @apply w-[266px] list-none md:w-[285px];
 }
