--- a/src/components/board/column/body/item/style.module.scss
+++ b/src/components/board/column/body/item/style.module.scss
@@ -1,11 +1,11 @@
 .kanban-task-item :global {
   @apply relative mb-3 list-none rounded-md border border-slate-200 bg-white p-3;
+  .bg {
+    @apply overflow-hidden;
+  }
   .task-name {
     @apply hover:cursor-pointer;
     @apply text-sm font-medium text-blue-900;
-  }
-  .bg {
-    @apply h-full w-full;
   }
   .actions {
     @apply flex justify-between gap-x-2;
