--- a/src/components/board/column/body/item/duo-date/style.module.scss
+++ b/src/components/board/column/body/item/duo-date/style.module.scss
@@ -1,5 +1,5 @@
 .kanban-task-duo-date {
-  @apply flex items-center gap-x-2 rounded-[4px] border bg-blue-600;
+  @apply flex items-center gap-x-2 overflow-hidden rounded-[4px]  bg-blue-600;
   @apply text-sm font-medium text-white;
   @apply h-[30px] px-2;
 }
