--- a/src/components/documents/content/style.module.scss
+++ b/src/components/documents/content/style.module.scss
@@ -8,4 +8,10 @@
   pre {
     @apply bg-slate-800 p-2 text-slate-200;
   }
+  .prose {
+    max-width: none;
+    & :where(img):not(:where([class~='not-prose'] *)) {
+      max-width: none;
+    }
+  }
 }
