--- a/src/components/topbar-new/top-area/right/link/style.module.scss
+++ b/src/components/topbar-new/top-area/right/link/style.module.scss
@@ -1,5 +1,5 @@
 .topbar-link :global {
-  @apply mr-2 font-semibold;
+  @apply mr-[-0.75rem] font-semibold;
   a:first-child {
     @apply mr-3;
   }
